--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
