--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.16.0",
+    "safe-buffer": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
